examples/test/testpolicy2627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2627
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key32: value36
      key17: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value12
          key0: value41
      podSelector:
        matchLabels:
          key23: value2
          key21: value48
          key0: value24
